package Flyweight_Pattern;
public class GasStationMarkerStyle implements MarkerStyle {
    @Override
    public void display() {
        System.out.println("Displaying gas station icon with label style.");
    }
}
