package Flyweight_Pattern;
public class HospitalMarkerStyle implements MarkerStyle {
    @Override
    public void display() {
        System.out.println("Displaying hospital icon with label style.");
    }
}
