package Flyweight_Pattern;
public interface MarkerStyle {
    void display();
}
