package Flyweight_Pattern;
public class RestaurantMarkerStyle implements MarkerStyle {
    @Override
    public void display() {
        System.out.println("Displaying restaurant icon with label style.");
    }
}